## Process this file with automake to produce Makefile.in

TESTS = smoke.tst diffpos.tst cavern.tst extend.tst 3dtopos.tst

EXTRA_DIST = smoke.tst diffpos.tst cavern.tst extend.tst 3dtopos.tst\
beginroot.svx\
oneleg.svx oneleg.pos\
midpoint.svx midpoint.pos\
noose.svx noose.pos\
cross.svx cross.pos\
deltastar.svx deltastar.pos\
deltastar2.svx deltastar2.pos\
firststn.svx firststn.pos\
break_replace_pfx.svx\
bug0.svx bug1.svx bug2.svx bug3.svx bug3.pos bug4.svx bug5.svx\
expobug.svx\
nosurvey2.svx nosurvey2.pos\
cartesian.svx cartesian.pos\
cartesian2.svx cartesian2.pos\
require.svx\
calibrate_tape.svx calibrate_tape.pos\
delatenda.pos delatendb.pos delatend.out\
addatenda.pos addatendb.pos addatend.out\
begin_no_end.svx end_no_begin.svx end_no_begin_nest.svx\
require_fail.svx\
extend.svx extendx.3d\
revcomplist.svx\
exporterr1.svx exporterr2.svx exporterr3.svx exporterr4.svx exporterr5.svx\
exporterr6.svx exporterr1b.svx exporterr2b.svx exporterr3b.svx exporterr6b.svx\
hanging_cpt.svx\
self_loop.svx self_eq_loop.svx badinc.svx badinc2.svx export.svx export2.svx\
singlefix.svx singlefix.pos singlereffix.svx singlereffix.pos\
singlefixerr.svx singlefixerr.pos singlereffixerr.svx singlereffixerr.pos\
includecomment.svx reenterwarn.svx\
angleunits.svx angleunits.pos\
lengthunits.svx lengthunits.pos\
cmd_default.svx cmd_prefix.svx cmd_truncate.svx cmd_truncate.pos\
cmd_case.svx cmd_case.pos cmd_fix.svx cmd_fix.pos cmd_solve.svx cmd_solve.pos\
cmd_entrance.svx\
stnsurvey1.svx stnsurvey2.svx\
tapelessthandepth.svx longname.svx\
chinabug.svx chinabug2.svx\
multinormal.svx multinormal.pos\
multinormignall.svx multinormignall.pos\
multidiving.svx multidiving.pos\
multicylpolar.svx multicylpolar.pos\
multicartesian.svx multicartesian.pos\
multinosurv.svx multinosurv.pos\
multinormalbad.svx multibug.svx\
cmd_title.svx cmd_titlebad.svx\
cmd_dummy.svx cmd_infer.svx cmd_infer.pos\
cartes.svx cartes.pos\
diving.svx diving.pos\
cylpolar.svx cylpolar.pos\
normal.svx normal.pos\
normignall.svx normignall.pos\
nosurv.svx nosurv.pos\
cmd_flags.svx bad_cmd_flags.svx\
plumb.svx plumb.pos\
cmd_fix_bad.svx\
cmd_sd.svx cmd_sd_bad.svx\
cmd_set.svx cmd_set_bad.svx\
unusedstation.svx exportnakedbegin.svx\
oldestyle.svx\
pos.pos v0.3d v0b.3d v1.3d v2.3d v3.3d\
baddatacylpolar.svx bugdz.svx bugdz.pos badnewline.svx\
badquantities.svx imgoffbyone.svx imgoffbyone.pos\
infereqtopofil.svx infereqtopofil.pos\
3sdfixbug.svx 3sdfixbug.pos\
extend2names.svx extend2namesx.3d\
omitclino.svx omitclino.pos\
back.svx back.pos\
notentranceorexport.svx inferunknown.svx inferexports.svx\
bad_units_factor.svx percent_gradient.svx percent_gradient.pos dotinsurvey.svx\
2fixbug.svx leandroclino.svx leandroclino.pos lowsd.svx revdir.svx revdir.pos\
gettokennullderef.svx lech.svx level.svx level.pos\
declination.dat declination.pos ignore.dat ignore.pos backread.dat backread.pos\
dot17.svx dot17.pos 3dcorner.svx 3dcorner.pos surfequate.svx surfequate.dxf\
nosurveyhanging.svx cmd_solve_hanging.svx\
eswap.svx eswap.espec eswapx.3d\
eswap-break.svx eswap-break.espec eswap-breakx.3d
