## Process this file with automake to produce Makefile.in

TESTS = smoke.tst diffpos.tst cavern.tst extend.tst 3dtopos.tst aven.tst

EXTRA_DIST = compare.tst $(TESTS)\
beginroot.svx beginroot.out\
oneleg.svx oneleg.pos\
midpoint.svx midpoint.pos\
noose.svx noose.pos\
cross.svx cross.pos\
deltastar.svx deltastar.pos\
deltastar2.svx deltastar2.pos\
firststn.svx firststn.pos\
break_replace_pfx.svx\
bug0.svx bug1.svx bug2.svx bug3.svx bug3.pos bug4.svx bug5.svx\
expobug.svx\
nosurvey2.svx nosurvey2.pos nosurvey2.out\
cartesian.svx cartesian.pos cartesian.out\
cartesian2.svx cartesian2.pos cartesian2.out\
require.svx\
calibrate_tape.svx calibrate_tape.pos\
delatenda.pos delatendb.pos delatend.out\
addatenda.pos addatendb.pos addatend.out\
begin_no_end.svx end_no_begin.svx end_no_begin_nest.svx\
require_fail.svx\
extend.svx extendx.3d\
revcomplist.svx\
exporterr1.svx exporterr2.svx exporterr3.svx exporterr4.svx exporterr5.svx\
exporterr6.svx exporterr1b.svx exporterr2b.svx exporterr3b.svx exporterr6b.svx\
hanging_cpt.svx\
self_loop.svx self_eq_loop.svx\
badinc.out badinc.svx\
badinc2.out badinc2.svx\
badinc3.out badinc3.svx\
badinc4.out badinc4.svx\
export.svx export2.svx\
singlefix.svx singlefix.pos singlereffix.svx singlereffix.pos\
singlefixerr.svx singlefixerr.pos singlereffixerr.svx singlereffixerr.pos\
includecomment.svx reenterwarn.svx\
angleunits.svx angleunits.pos\
lengthunits.svx lengthunits.out lengthunits.pos\
cmd_alias.svx cmd_alias.out cmd_alias.pos\
cmd_default.svx cmd_prefix.svx cmd_truncate.svx cmd_truncate.pos\
cmd_case.svx cmd_case.pos cmd_fix.svx cmd_fix.pos cmd_solve.svx cmd_solve.pos\
cmd_entrance.svx\
stnsurvey1.svx stnsurvey2.svx\
tapelessthandepth.svx longname.svx\
chinabug.svx chinabug2.svx\
multinormal.svx multinormal.pos\
multinormignall.svx multinormignall.pos\
multidiving.svx multidiving.pos\
multicylpolar.svx multicylpolar.pos\
multicartesian.svx multicartesian.pos multicartesian.out\
multinosurv.svx multinosurv.pos multinosurv.out\
multinormalbad.svx multibug.svx\
cmd_title.svx cmd_titlebad.svx\
cmd_dummy.svx cmd_infer.svx cmd_infer.pos\
cartes.svx cartes.pos cartes.out\
diving.svx diving.pos\
cylpolar.svx cylpolar.pos\
normal.svx normal.pos\
normal_bad.svx normal_bad.out\
normignall.svx normignall.pos\
nosurv.svx nosurv.pos nosurv.out\
cmd_flags.svx bad_cmd_flags.svx\
plumb.svx plumb.pos\
cmd_begin_bad.svx cmd_begin_bad.out\
cmd_equate_bad.svx cmd_equate_bad.out\
cmd_export_bad.svx cmd_export_bad.out\
cmd_fix_bad.svx cmd_fix_bad.out\
cmd_sd.svx cmd_sd_bad.svx cmd_sd_bad.out\
cmd_set.svx cmd_set.pos\
cmd_set_bad.svx cmd_set_bad.out\
unusedstation.svx exportnakedbegin.svx\
oldestyle.svx\
pos.pos v0.3d v0b.3d v1.3d v2.3d v3.3d\
baddatacylpolar.svx bugdz.svx bugdz.pos badnewline.svx\
badquantities.svx imgoffbyone.svx imgoffbyone.pos\
infereqtopofil.svx infereqtopofil.pos\
3sdfixbug.svx 3sdfixbug.pos\
extend2names.svx extend2namesx.3d\
omitclino.svx omitclino.pos\
back.svx back.out back.pos\
back2.svx back2.out back2.pos\
bad_back.svx bad_back.out\
notentranceorexport.svx inferunknown.svx inferexports.svx\
bad_units_factor.svx bad_units_factor.out\
bad_units_qlist.svx bad_units_qlist.out\
percent_gradient.svx percent_gradient.pos\
dotinsurvey.svx dotinsurvey.out\
2fixbug.svx leandroclino.svx leandroclino.pos lowsd.svx revdir.svx revdir.pos\
gettokennullderef.svx lech.svx level.svx level.pos\
declination.dat declination.pos ignore.dat ignore.pos backread.dat backread.pos\
nomeasure.dat nomeasure.out nomeasure.pos\
dot17.svx dot17.pos 3dcorner.svx 3dcorner.pos surfequate.svx surfequate.dxf\
nosurveyhanging.svx nosurveyhanging.out\
cmd_solve_hanging.svx passage.svx hanging_lrud.svx\
cmd_solve_nothing.svx cmd_solve_nothing_implicit.svx\
cmd_date.svx cmd_date.out cmd_datebad.svx cmd_datebad.out cmd_datebad2.svx cmd_datebad2.out\
cmd_calibrate.svx cmd_calibrate.out cmd_calibrate.pos\
cmd_declination.svx cmd_declination.out cmd_declination.pos\
cmd_declination_auto.svx cmd_declination_auto.out cmd_declination_auto.pos\
cmd_declination_conv.out cmd_declination_conv.pos cmd_declination_conv.svx\
unconnected-bug.svx unconnected-bug.out\
eswap.svx eswap.espec eswapx.3d\
eswap-break.svx eswap-break.espec eswap-breakx.3d\
equatenosuchstn.out equatenosuchstn.svx\
surveytypo.out surveytypo.svx\
skipafterbadomit.svx passagebad.svx\
badreadingdotplus.svx badreadingdotplus.out\
badcalibrate.svx badcalibrate.out\
calibrate_clino.svx calibrate_clino.out calibrate_clino.pos\
badunits.svx badunits.out badbegin.svx badbegin.out\
anonstn.svx anonstn.out anonstn.pos\
anonstnbad.svx anonstnbad.out\
anonstnrev.svx anonstnrev.out anonstnrev.pos\
cmd_entrance_bad.out cmd_entrance_bad.svx\
cmd_prefix.out\
cmd_prefix_bad.out cmd_prefix_bad.svx\
doubleinc.out doubleinc.svx\
reenterlots.out reenterlots.svx\
cs.out cs.pos cs.svx\
csbad.out csbad.svx\
csbadsdfix.out csbadsdfix.svx\
cslonglat.out cslonglat.svx\
omitfixaroundsolve.out omitfixaroundsolve.svx\
repeatreading.svx repeatreading.out repeatreading.pos\
mixedeols.out mixedeols.svx
