## Process this file with automake to produce Makefile.in

TESTS = smoke.tst diffpos.tst cavern.tst extend.tst 3dtopos.tst aven.tst imgtest.tst dump3d.tst

EXTRA_DIST = compare.tst $(TESTS)\
beginroot.svx beginroot.out\
oneleg.svx oneleg.pos\
midpoint.svx midpoint.pos\
lollipop.svx lollipop.out lollipop.pos\
fixedlollipop.svx fixedlollipop.out fixedlollipop.pos\
cross.svx cross.pos\
deltastar.svx deltastar.pos\
deltastar2.svx deltastar2.pos\
deltastarhanging.svx deltastarhanging.out\
firststn.svx firststn.pos\
break_replace_pfx.svx\
bug0.svx bug1.svx bug2.svx bug3.svx bug3.out bug3.pos bug4.svx bug5.svx\
expobug.svx\
nosurvey2.svx nosurvey2.pos nosurvey2.out\
cartesian.svx cartesian.pos cartesian.out\
cartesian2.svx cartesian2.pos cartesian2.out\
require.svx\
calibrate_tape.svx calibrate_tape.pos\
delatenda.pos delatendb.pos delatend.out\
addatenda.pos addatendb.pos addatend.out\
begin_no_end.svx end_no_begin.svx end_no_begin_nest.svx\
require_fail.out require_fail.svx\
extend.svx extendx.3d\
revcomplist.svx\
exporterr1.svx exporterr2.svx exporterr3.svx exporterr4.svx exporterr5.svx\
exporterr6.svx exporterr1b.svx exporterr1b.out exporterr2b.svx\
exporterr3b.svx exporterr6b.svx\
hanging_cpt.svx\
self_loop.svx self_eq_loop.svx\
badinc.out badinc.svx\
badinc2.out badinc2.svx\
badinc3.out badinc3.svx\
badinc4.out badinc4.svx\
badinc5.mak badinc5.out\
export.svx export2.svx\
singlefix.svx singlefix.out singlefix.pos singlereffix.svx singlereffix.pos\
singlefixerr.svx singlefixerr.pos singlereffixerr.svx singlereffixerr.pos\
includecomment.svx\
reenterwarn.svx reenterwarn.out\
angleunits.svx angleunits.pos\
lengthunits.svx lengthunits.out lengthunits.pos\
cmd_alias.svx cmd_alias.out cmd_alias.pos\
cmd_alias_bad.svx cmd_alias_bad.out\
cmd_default.svx\
cmd_default_bad.svx cmd_default_bad.out\
cmd_prefix.svx cmd_truncate.svx cmd_truncate.pos\
cmd_truncate_bad.svx cmd_truncate_bad.out\
cmd_case.svx cmd_case.pos\
cmd_case_bad.svx cmd_case_bad.out\
cmd_cartesian.svx cmd_cartesian.dump cmd_cartesian.out\
cmd_cartesian_bad.svx cmd_cartesian_bad.out\
cmd_fix.svx cmd_fix.out cmd_fix.pos\
cmd_fix2.svx cmd_fix2.out\
cmd_solve.svx cmd_solve.out cmd_solve.pos\
cmd_entrance.svx\
stnsurvey1.svx stnsurvey2.svx\
tapelessthandepth.svx longname.svx\
chinabug.svx chinabug.out chinabug2.svx\
multinormal.svx multinormal.pos\
multinormignall.svx multinormignall.pos\
multidiving.svx multidiving.out multidiving.pos\
multicylpolar.svx multicylpolar.pos\
multicartesian.svx multicartesian.pos multicartesian.out\
multinosurv.svx multinosurv.dump multinosurv.out\
multinormalbad.svx multibug.svx\
cmd_team.svx\
cmd_team_bad.svx cmd_team_bad.out\
cmd_title.svx cmd_titlebad.svx\
cmd_dummy.svx cmd_infer.svx cmd_infer.pos\
cartes.svx cartes.pos cartes.out\
diving.svx diving.pos diving.out\
cylpolar.svx cylpolar.pos\
normal.svx normal.pos\
normal_bad.svx normal_bad.out\
normignall.svx normignall.pos\
nosurv.svx nosurv.pos nosurv.out\
quadrant_bearing.svx quadrant_bearing.pos\
bad_quadrant_bearing.svx bad_quadrant_bearing.out\
cmd_flags.svx bad_cmd_flags.svx bad_cmd_flags.out\
plumb.svx plumb.pos\
cmd_begin_bad.svx cmd_begin_bad.out\
cmd_equate_bad.svx cmd_equate_bad.out\
cmd_export_bad.svx cmd_export_bad.out\
cmd_fix_bad.svx cmd_fix_bad.out\
cmd_fix_bad2.svx cmd_fix_bad2.out\
cmd_sd.svx cmd_sd_bad.svx cmd_sd_bad.out\
cmd_set.svx cmd_set.pos\
cmd_set_bad.svx cmd_set_bad.out\
cmd_set_dot_in_name.svx cmd_set_dot_in_name.dump\
unusedstation.svx exportnakedbegin.svx\
oldestyle.svx\
pos.pos v0.3d v0b.3d v1.3d v2.3d v3.3d\
baddatacylpolar.svx baddatacylpolar.out\
baddatanosurv.svx baddatanosurv.out\
bugdz.svx bugdz.pos badnewline.svx\
badquantities.svx imgoffbyone.svx imgoffbyone.pos\
infereqtopofil.svx infereqtopofil.pos\
3sdfixbug.svx 3sdfixbug.pos\
extend2names.svx extend2namesx.3d\
omitclino.svx omitclino.pos\
back.svx back.out back.pos\
back2.svx back2.out back2.pos\
bad_back.svx bad_back.out\
notentranceorexport.svx inferunknown.svx inferunknown.out inferexports.svx\
bad_units_factor.svx bad_units_factor.out\
bad_units_qlist.svx bad_units_qlist.out\
percent_gradient.svx percent_gradient.pos\
dotinsurvey.svx dotinsurvey.out\
2fixbug.svx leandroclino.svx leandroclino.pos lowsd.svx revdir.svx revdir.pos\
gettokennullderef.svx lech.svx level.svx level.pos\
backread.dat backread.dump\
clptest.dat clptest.clp clptest.dump\
corrections.dat corrections.pos\
depthguage.dat depthguage.dump\
karstcompat.dat karstcompat.dump\
flags.dat flags.dump flags.out lrud.dat lrud.out lrud.pos\
nomeasure.dat nomeasure.out nomeasure.pos noteam.dat noteam.out noteam.pos\
badmak.mak badmak.out\
fixfeet.mak fixfeet.pos\
folder.mak subdir/cave1a.dat subdir/cave1b.dat subdir/subsubdir/cave2.dat\
utm.mak utm.out utm.dump\
walls.srv walls.out walls.dump\
wallsbaddatum.out wallsbaddatum.wpj\
wallsdecl.wpj wallsdecl.srv wallsdecl.out wallsdecl.dump\
badopts.srv badopts.out\
dot17.svx dot17.pos 3dcorner.svx 3dcorner.pos\
nosurveyhanging.svx nosurveyhanging.out\
nosurveyhanging2.svx nosurveyhanging2.dump nosurveyhanging2.out\
cmd_solve_hanging.svx passage.svx hanging_lrud.svx\
cmd_solve_nothing.svx\
cmd_solve_nothing_implicit.svx cmd_solve_nothing_implicit.out\
cmd_date.dump cmd_date.svx cmd_date.out\
cmd_datebad.svx cmd_datebad.out cmd_datebad2.svx cmd_datebad2.out\
cmd_calibrate.svx cmd_calibrate.out cmd_calibrate.pos\
cmd_declination.svx cmd_declination.out cmd_declination.pos\
cmd_declination_auto.svx cmd_declination_auto.out cmd_declination_auto.pos\
cmd_declination_auto_bad.svx cmd_declination_auto_bad.out\
cmd_declination_conv.out cmd_declination_conv.pos cmd_declination_conv.svx\
cmd_declination_conv_proj_bug.out cmd_declination_conv_proj_bug.pos cmd_declination_conv_proj_bug.svx\
unconnected-bug.svx unconnected-bug.out\
eswap.svx eswap.espec eswapx.3d\
eswap-break.svx eswap-break.espec eswap-breakx.3d\
equatenosuchstn.out equatenosuchstn.svx\
surveytypo.out surveytypo.svx\
skipafterbadomit.svx passagebad.svx\
badreadingdotplus.svx badreadingdotplus.out\
badcalibrate.svx badcalibrate.out\
calibrate_clino.svx calibrate_clino.out calibrate_clino.pos\
badunits.svx badunits.out badbegin.svx badbegin.out\
anonstn.svx anonstn.out anonstn.pos\
anonstnbad.svx anonstnbad.out\
anonstnrev.svx anonstnrev.out anonstnrev.pos\
cmd_entrance_bad.out cmd_entrance_bad.svx\
cmd_prefix.out\
cmd_prefix_bad.out cmd_prefix_bad.svx\
doubleinc.out doubleinc.svx\
reenterlots.out reenterlots.svx\
cs.out cs.pos cs.svx\
csbad.altout csbad.out csbad.svx\
csbadsdfix.altout csbadsdfix.out csbadsdfix.svx\
csfeet.out csfeet.pos csfeet.svx\
cslonglat.out cslonglat.svx\
omitfixaroundsolve.out omitfixaroundsolve.svx\
repeatreading.svx repeatreading.out repeatreading.pos\
mixedeols.out mixedeols.svx\
utf8bom.out utf8bom.svx\
nonewlineateof.out nonewlineateof.svx\
suspectreadings.out suspectreadings.svx\
cmd_data_default.svx\
cmd_data_ignore.out cmd_data_ignore.pos cmd_data_ignore.svx\
samename.svx\
tabinhighlight.out tabinhighlight.svx\
legacytokens.out legacytokens.svx\
component_count_bug.svx component_count_bug.out\
component_count_bug2.svx component_count_bug2.out\
3dexport.dump 3dexport.svx\
dxffullcoords.dxf dxffullcoords.svx\
dxfsurfequate.svx dxfsurfequate.dxf\
gpxexport.gpx gpxexport.svx\
hpglexport.hpgl hpglexport.svx\
jsonexport.json jsonexport.svx\
kmlexport.kml kmlexport.svx\
pltexport.plt pltexport.svx\
svgexport.svg svgexport.svx

EXTRA_DIST +=\
imgtest_simple.svx\
imgtest_survey.svx

EXTRA_DIST +=\
cmapstn.adj cmapstn.dump\
cmap.sht cmap.dump\
dump3ddate.3d dump3ddate.dump\
extendsurveyx.3d extendsurveyx.dump\
filter.plt filter.dump\
separator.3d separator.dump\
multisection.plt multisection.dump\
multisurvey.plt multisurvey.dump\
pre1970.plt pre1970.dump
